# AirConManager

./: CMakeCache.txt  CMakeLists.txt
docs/: Руководство пользователя.docx
includes/: coolinputwindow.h  coolwindow.h  settings.h
src/: coolinputwindow.cpp  coolwindow.cpp  main.cpp  settings.cpp
